<resources>
    <string name="tab1_name">tab1</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="common_loading">加载中&#8230;</string>
    <string name="tab_main">首页</string>
    <string name="app_name">倾奢</string>
    <string name="demo_simple_title">简单list测试</string>
    <string name="tab_home">首页</string>
    <string name="app_day">夺宝推荐</string>
    <string name="hot_special">热门专题</string>
    <string name="tab_home_door">线下门店</string>
    <string name="tab_unused">奢养</string>
    <string name="tab_issue">云购</string>
    <string name="tab_information">专题</string>
    <string name="tab_mine">我的</string>
    <string name="tab_me_no">您还没有登录哦</string>
    <string name="tab_me_login">立即登录</string>
    <string name="tab_me_c">闲置订单</string>
    <string name="tab_me_d">养护订单</string>
    <string name="tab_me_e">我的发布</string>
    <string name="tab_me_f">我的优惠劵</string>
    <string name="tab_me_g">我的账户</string>
    <string name="tab_me_integral">我的积分</string>
    <string name="tab_me_close">退出登录</string>
    <string name="tab_me_h">关于我们</string>
    <string name="tab_me_i">关于售后</string>
    <string name="tab_me_j">客服在线 周一至周五（9:30---18:30）</string>
    <string name="tab_me_n">云购记录</string>
    <string name="common_service_phone">010-52487790</string>
    <string name="tab_me_kefu">客服电话 周一至周五（9:30---18:30）</string>
    <string name="tab_me_l">官方QQ群：498262127</string>
    <string name="tab_me_m">版本信息： 1.1.0</string>
    <string name="issue_a">人品大爆发：</string>
    <string name="login_top">旧爱如新</string>
    <string name="login_et_ip">请输入手机号</string>
    <string name="login_et">获取验证码</string>
    <string name="login_et_pwd">验证码</string>
    <string name="login_tv"> 我已阅读并同意</string>
    <string name="login_tv_pro"> 用户注册协议</string>
    <string name="login_lg">登录</string>
    <string name="issue_begin">开始</string>
    <string name="curing_clean">基础清洗</string>
    <string name="curing_repair">补色修复</string>
    <string name="curing_maintain">专业维护</string>
    <string name="curing_order_whole">全部</string>
    <string name="curing_order_paymentno">未付款</string>
    <string name="curing_order_payment">已付款</string>
    <string name="curing_order_complete">已完成</string>
    <string name="continue_indiana">继续夺宝</string>
    <string name="me_exchange">兑换</string>
    <string name="me_code">兑换码</string>
    <string name="me_free">免费</string>
    <string name="me_coupon">优惠劵</string>
    <string name="me_registered">新手注册劵</string>
    <string name="me_data">2016-05-29</string>
    <string name="me_overdue">过期</string>
    <string name="me_income_detail"> 交易明细</string>
    <string name="me_income_balance">可提现余额:</string>
    <string name="me_income_accumulated">累计收入</string>
    <string name="me_income_meney">¥</string>
    <string name="me_income_withdrawals">提现</string>
    <string name="me_name">用户名</string>
    <string name="me_phone_number">绑定手机号</string>
    <string name="me_determine">确定</string>
    <string name="order_submit">提交订单</string>
    <string name="order_take_method">取送方式：</string>
    <string name="national_package">全国包邮</string>
    <string name="order_receipt_address">收货地址：</string>
    <string name="order_receipt_address_door">上门地址：</string>
    <string name="order_receipt_address_time">预约上门时间：</string>
    <string name="order_receipt_choice">选择地址</string>
    <string name="order_receipt_store">选择门店</string>
    <string name="order_mail">请将物品寄到：北京市通州区宋庄镇南堡南街141号心上（收），010—60572565.服务完成后，将寄还到您填写的地址。</string>
    <string name="order_service">上门服务费：</string>
    <string name="order_coupon">优惠劵：</string>
    <string name="order_total">合计：</string>
    <string name="order_payment_method">请选择支付方式：</string>
    <string name="order_payment">去支付</string>
    <string name="order_weixin">微信支付</string>
    <string name="order_zhifubao">支付宝</string>
    <string name="order_member">会员余额支付 </string>
    <string name="order_contact">联系客服</string>
    <string name="order_immediate">立即下单</string>
    <string name="order_new_address">添加新地址</string>
    <string name="issue_records">一元夺宝</string>
    <string name="issue_indiana">夺宝进度</string>
    <string name="issue_progress">-</string>
    <string name="address_consignee">* 收货人</string>
    <string name="address_ipone">* 手机号码</string>
    <string name="address_cities">* 填写省市</string>
    <string name="address_consignee_in">请填写收货人姓名</string>
    <string name="address_ipone_in">请填写收货人手机号</string>
    <string name="address_cities_in">请填写省、市</string>
    <string name="address_detail_in">请填写收货人详细地址</string>
    <string name="address_detail">* 详细地址</string>
    <string name="address_preservation">保存</string>
    <string name="vouchers_cancel">取消</string>
    <string name="vouchers">代金劵</string>
    <string name="vouchers_no">暂无优惠劵</string>
    <string name="vouchers_no_no">暂无可用的优惠劵哦</string>
    <string name="issue_in">立即参与</string>
    <string name="issue_random">颜色随机</string>
    <string name="issue_no_activity">您未参与本次夺宝活动</string>
    <string name="issue_imagetext">图文详情</string>
    <string name="issue_wifi">建议在wifi环境打开</string>
    <string name="issue_new">前往最新期</string>
    <string name="issue_announce">往期揭晓</string>
    <string name="announce_details">往期详情</string>
    <string name="issue_record">用户参与记录</string>
    <string name="issue_time">揭晓时间:</string>
    <string name="issue_luckyuser">幸运用户:</string>
    <string name="issue_luckynumber">幸运号码:</string>
    <string name="issue_lucky_user">得宝用户:</string>
    <string name="issue_lucky_data">参与日期:</string>
    <string name="issue_participation">参与人次:</string>
    <string name="issue_partici">参与</string>
    <string name="issue_pation">人次</string>
    <string name="issue_calculation">计算详情</string>
    <string name="issue_stage">第十九期</string>
    <string name="transaction_no">暂无明细</string>
    <string name="transaction_no_operation">您还没有进行过交易操作哦</string>
    <string name="withdrawals_mode">提现方式</string>
    <string name="withdrawals_money">提现金额</string>
    <string name="withdrawals_user">账户：</string>
    <string name="withdrawals_name">姓名：</string>
    <string name="withdrawals_num">手机号：</string>
    <string name="withdrawals_zhi">支付宝</string>
    <string name="withdrawals_money_ed">可提现金额: 9000000.00元</string>
    <string name="withdrawals_user_ed">支付宝或银行账户</string>
    <string name="withdrawals_name_ed">请输入姓名</string>
    <string name="withdrawals_num_edit">银行卡(支付宝)绑定手机号</string>
    <string name="withdrawals_care">注意： 单笔提现最低金额为100元，为确保您的资金安全，提现需要账户和姓名对应，预计提现到账时间72小时。</string>
    <string name="withdrawals_apply">申请提现</string>
    <string name="withdrawals_bankname">银行名称：</string>
    <string name="withdrawals_bank">例： 中国农业银行</string>
    <string name="detail_data">2016-6-6 14:23:23</string>
    <string name="detail_money">1000</string>
    <string name="detail_expenditure">支出 ¥ </string>
    <string name="detail_jia">+</string>
    <string name="detail_sign">签到</string>
    <string name="detail_suc">成功</string>
    <string name="place_send">寄送地址：</string>
    <string name="place_send_province">省</string>
    <string name="place_send_add">13212345678</string>
    <string name="place_send_city">市</string>
    <string name="place_send_num">浦东大桥服务点</string>
    <string name="place_send_sh">13412345678</string>
    <string name="place_send_area">区</string>
    <string name="product_details">商品详情</string>
    <string name="tran_details">已满</string>
    <string name="ipone">手机号码</string>
    <string name="ipone_dian">手机号码：</string>
    <string name="issue_agreement">《夺宝岛用户服务协议》</string>
    <string name="indiana_order">订单编号：</string>
    <string name="indiana_infor">参与信息：</string>
    <string name="indiana_frequency">参与次数：</string>
    <string name="details_frequency">参与次数</string>
    <string name="indiana_time">参与时间：</string>
    <string name="indiana_num">参与号码：</string>
    <string name="indiana_num_pr">参与号码</string>
    <string name="indiana_look">点击查看</string>
    <string name="indiana_paytype">支付方式：</string>
    <string name="indiana_total">商品总额：</string>
    <string name="indiana_balance">账户余额</string>
    <string name="indiana_place">下单时间：</string>
    <string name="details_consumption">消费金额</string>
    <string name="details_type">交易类型</string>
    <string name="details_name">商品名称</string>
    <string name="details_coupon">代金劵</string>
    <string name="details_integral">积分</string>
    <string name="details_money">总金额</string>
    <string name="details_sources">数据来源</string>
    <string name="details_side">明细处理方</string>
    <string name="details_data">交易日期</string>
    <string name="curing_number">订单号：</string>
    <string name="curing_nm">数量：</string>
    <string name="curing_money">总价：¥</string>
    <string name="curing_inf">订单信息</string>
    <string name="curing_nb">订单号</string>
    <string name="curing_data">下单时间</string>
    <string name="curing_mone">商品金额</string>
    <string name="curing_paid">实付金额</string>
    <string name="curing_state">订单状态</string>
    <string name="curing_inpon">电话客服</string>
    <string name="curing_kf">在线客服</string>
    <string name="current_announcement">揭晓公式</string>
    <string name="current_remainder">(数值A/商品所需次数)取余数+10000001</string>
    <string name="current_sum">数值A=该商品最后一个夺宝号码分配完毕时间点前，夺宝岛平台最后50个参与时间相加求和</string>
    <string name="current_num">数值A=1926798355</string>
    <string name="current_data">参与时间</string>
    <string name="current_user">用户名</string>
    <string name="current_nb">本期揭晓号码</string>
    <string name="calculation_details">计算详情</string>
    <string name="real_payment">实付款：¥</string>
    <string name="dialog_prompt">提示</string>
    <string name="dialog_prompt_no">暂无可提现余额</string>
    <string name="dialog_prompt_yes">确定</string>
    <string name="order_one">请拍摄一张需要养护的商品的图片</string>
    <string name="photo_graph">拍照</string>
    <string name="photo_choose">从手机相册选取</string>
    <string name="photo_cancel">取消</string>
    <string name="reduce">—</string>
    <string name="plus">+</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="ttew">20</string>
    <string name="right">(</string>
    <string name="left">)</string>
    <string name="pop_ok">完成</string>
    <string name="product_num">您参与了</string>
    <string name="product_text">次夺宝</string>
    <string name="issut_inf">揭晓信息</string>
    <string name="issut_num">揭晓号码:</string>
    <string name="issu_user">得宝用户:</string>
    <string name="issu_time">揭晓时间:</string>
    <string name="issue_nm">参与次数:</string>
    <string name="issue_text">很遗憾，您未能成功参与本期一元夺宝</string>
    <string name="issu_con">继续参与，机会多多</string>
    <string name="choose">请选择取送货方式</string>
    <string name="indiana_plo">收货人：</string>
    <string name="indiana_add">收货地址：</string>
    <string name="indiana_mode">配送方式：</string>
    <string name="indiana_numn">快递单号：</string>
    <string name="Winning">恭喜您中奖</string>
    <string name="deliver_no">暂未发货</string>
    <string name="add_confirm">确认收货地址</string>
    <string name="add_choose">请选择收货地址</string>
    <string name="home_rturn">回到首页</string>
    <string name="home_sucess">支付成功</string>
    <string name="choise_city">请选择地区</string>
    <string name="choise_pay">立即支付</string>
    <string name="canle_pay">取消订单</string>
    <string name="pop_share">分享到</string>
    <string name="pop_weixin">微信好友</string>
    <string name="pop_friend">朋友圈</string>
    <string name="pop_weibo">新浪微博</string>
    <string name="pop_grid">知道了</string>
    <string name="home_qd">七日签到</string>
    <string name="home_xx">系统消息</string>
    <string name="Seckill">秒杀</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
</resources>