<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_cc"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ff"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/ds_300"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/ds_30"
            android:text="@string/address_consignee"
            android:textColor="@color/color_00"
            android:textSize="@dimen/fs_45"/>
        <EditText
            android:id="@+id/et_consignee"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:layout_marginLeft="@dimen/ds_30"
            android:background="@null"
            android:hint="@string/address_consignee_in"
            android:imeOptions="actionNext"
            android:maxLength="11"
            android:padding="@dimen/ds_20"
            android:phoneNumber="true"
            android:textColor="@color/color_00"
            android:textColorHint="@color/color_cc"
            android:textSize="@dimen/fs_60" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:background="@color/color_cc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ff"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/ds_300"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/ds_30"
            android:text="@string/address_ipone"
            android:textColor="@color/color_00"
            android:textSize="@dimen/fs_45"/>
        <EditText
            android:id="@+id/et_num"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:layout_marginLeft="@dimen/ds_30"
            android:background="@null"
            android:hint="@string/address_ipone_in"
            android:imeOptions="actionNext"
            android:maxLength="11"
            android:padding="@dimen/ds_20"
            android:phoneNumber="true"
            android:textColor="@color/color_00"
            android:textColorHint="@color/color_cc"
            android:textSize="@dimen/fs_60" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:background="@color/color_cc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ff"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/ds_300"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/ds_30"
            android:text="@string/address_cities"
            android:textColor="@color/color_00"
            android:textSize="@dimen/fs_45"/>
        <EditText
            android:id="@+id/et_city"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:layout_marginLeft="@dimen/ds_30"
            android:background="@null"
            android:hint="@string/address_cities_in"
            android:imeOptions="actionNext"
            android:maxLength="11"
            android:padding="@dimen/ds_20"
            android:phoneNumber="true"
            android:textColor="@color/color_00"
            android:textColorHint="@color/color_cc"
            android:textSize="@dimen/fs_60" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:background="@color/color_cc"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_ff"
        android:orientation="horizontal">
        <TextView
            android:layout_width="@dimen/ds_300"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/ds_30"
            android:text="@string/address_detail"
            android:textColor="@color/color_00"
            android:textSize="@dimen/fs_45"/>
        <EditText
            android:id="@+id/et_address"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:layout_marginLeft="@dimen/ds_30"
            android:background="@null"
            android:hint="@string/address_detail_in"
            android:imeOptions="actionNext"
            android:maxLength="11"
            android:padding="@dimen/ds_20"
            android:phoneNumber="true"
            android:textColor="@color/color_00"
            android:textColorHint="@color/color_cc"
            android:textSize="@dimen/fs_60" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:background="@color/color_cc"/>
    <Button
        android:id="@+id/add_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ds_50"
        android:layout_marginRight="@dimen/ds_50"
        android:layout_marginTop="@dimen/ds_100"
        android:background="@drawable/btn_login_selector"
        android:text="@string/address_preservation"
        android:textColor="@color/color_ff"
        android:textSize="@dimen/fs_70" />

</LinearLayout>
