<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_30"
        android:background="@color/color_cc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_140">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/ds_30"
            android:text="@string/current_nb"
            android:gravity="center"
            android:textColor="@color/color_00"
            android:textSize="@dimen/fs_50"/>
        <TextView
            android:id="@+id/cal_tv_lucky"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/ds_30"
            android:text="@string/current_announcement"
            android:gravity="center"
            android:textColor="@color/color_00"
            android:textSize="@dimen/fs_50"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_30"
        android:background="@color/color_cc"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ds_250"
            android:background="@color/color_c0"
            android:gravity="center_vertical"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ds_30"
                android:textSize="@dimen/fs_55"
                android:textColor="@color/color_ff"
                android:text="@string/current_announcement"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ds_30"
                android:layout_marginTop="@dimen/ds_20"
                android:textSize="@dimen/fs_45"
                android:textColor="@color/color_ff"
                android:text="@string/current_remainder"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_250"
        android:gravity="center_vertical"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ds_30"
            android:textSize="@dimen/fs_45"
            android:textColor="@color/color_00"
            android:text="@string/current_sum"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ds_30"
            android:layout_marginTop="@dimen/ds_20"
            android:textSize="@dimen/fs_45"
            android:textColor="@color/color_00"
            android:text="@string/current_num"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_1"
        android:background="@color/color_cc"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_100">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/current_data"
            android:gravity="center"
            android:layout_marginLeft="@dimen/ds_30"
            android:textColor="@color/color_00"
            android:textSize="@dimen/fs_45"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/current_user"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_marginRight="@dimen/ds_100"
            android:textColor="@color/color_00"
            android:textSize="@dimen/fs_45"/>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/calculation_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
