<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/ds_300"
    android:padding="@dimen/ds_40"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="@dimen/ds_200"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/ticket_bj_n">
        <TextView
            android:id="@+id/novice_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ds_25"
            android:text="@string/me_free"
            android:textColor="@color/color_ff"
            android:textSize="@dimen/fs_80"/>

        <TextView
            android:id="@+id/coupon_vt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/ds_15"
            android:text="@string/me_coupon"
            android:textColor="@color/color_ff"
            android:textSize="@dimen/fs_40"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/item_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_30"
            android:layout_marginLeft="@dimen/ds_40"
            android:text="@string/me_registered"
            android:textColor="@color/color_00"
            android:textSize="@dimen/fs_45"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ds_50"
            android:layout_marginLeft="@dimen/ds_40"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/me_data"
            android:textColor="@color/color_00"
            android:textSize="@dimen/fs_45"/>
            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/ds_20"
                android:text="@string/me_overdue"
                android:textColor="@color/color_00"
                android:textSize="@dimen/fs_45"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/coupon_img"
        android:layout_width="@dimen/ds_200"
        android:layout_height="match_parent"
        android:background="@drawable/ticket_n"/>

</LinearLayout>
