<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/prompt_box_no"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_30"
        android:textSize="@dimen/fs_50"
        android:gravity="center"
        android:text="@string/dialog_prompt"
        android:textColor="@color/color_00"/>
    <TextView
        android:id="@+id/prompt_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_30"
        android:gravity="center"
        android:text="@string/dialog_prompt_no"
        android:textSize="@dimen/fs_50"
        android:textColor="@color/color_00"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_1"
        android:layout_marginTop="@dimen/ds_50"
        android:background="@color/color_cc"/>
    <Button
        android:id="@+id/prompt_tv_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ds_15"
        android:background="@null"
        android:textSize="@dimen/fs_60"
        android:gravity="center"
        android:text="@string/dialog_prompt_yes"
        android:textColor="@color/colorPrimaryDark"/>

</LinearLayout>
