<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_ff"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_220">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/ds_40"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tran_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/detail_sign"
                    android:textSize="@dimen/fs_55"
                    android:textColor="@color/color_00"/>

            </LinearLayout>
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tran_detail_data"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/detail_suc"
                    android:textSize="@dimen/fs_50"
                    android:textColor="@color/color_00"/>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_jia"
                android:textSize="@dimen/fs_55"
                android:textColor="@color/color_3c"/>
            <TextView
                android:id="@+id/tran_detail_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/ds_40"
                android:text="@string/detail_money"
                android:textSize="@dimen/fs_55"
                android:textColor="@color/color_3c"/>
        </LinearLayout>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/ds_3"
        android:background="@color/color_cc"/>
</LinearLayout>
